--- a/css/default.css
+++ b/css/default.css
@@ -14,7 +14,7 @@ body {
 	-webkit-text-size-adjust:none;
 	-webkit-overflow-scrolling: touch;
 	min-width: 960px;
-	background: url(1.jpg) center 0;
+//	background: url(1.jpg) center 0;
 }
 a {
 	color: inherit;
@@ -173,13 +173,13 @@ table {
 	position: relative;
 	color: #fff;
 	white-space: nowrap;
-	border-radius: 20px;
+	border-radius: 24px;
 	background: #03a9f5;
 }
 .btn--outline {
+	line-height: 34px;
 	border: 2px solid;
 	background: none;
-	box-shadow: 0 5px 15px rgba(0,0,0,.2);
 }
 
 .pull-left {
@@ -384,6 +384,41 @@ table {
 	height: 592px;
 	color: #fff;
 	background: #0287c4
+}
+.slider-home .slide-show__box {
+	height: 592px;
+}
+.slider-home__item {
+	height: 592px;
+	padding-left: 170px;
+}
+.slider-home__img {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+}
+.slider-home__text {
+	font-size: 24px;
+	line-height: 36px;
+	font-weight: 300;
+	position: relative;
+	margin-top: auto;
+	margin-bottom: auto;
+}
+.slider-home__model {
+	font-size: 48px;
+	line-height: 54px;
+	font-weight: 300;
+	margin: 20px 0;
+	display: block;
+	text-transform: uppercase;
+}
+.slider-home__btn {
+	margin: 36px 0 12px;
+	line-height: 42px;
+	padding: 0 32px;
+	font-size: 14px;
+	font-weight: 400;
 }
 
 /* list-pic
