--- a/css/default.css
+++ b/css/default.css
@@ -10,7 +10,7 @@ html {
 body {
 	color: #292929;
 	position: relative;
-	font: 14px/18px 'Proxima Nova', 'ProximaNova', sans-serif;
+	font: 14px/18px 'ProximaNova', sans-serif;
 	-webkit-text-size-adjust:none;
 	-webkit-overflow-scrolling: touch;
 	min-width: 960px;
@@ -192,6 +192,11 @@ table {
 	background: #fff;
 	border: 1px solid #bae8ff;
 }
+.btn--outline:hover {
+	color: #03a9f5;
+	border-color: #fff;
+	background: #fff;
+}
 
 
 .pull-left {
@@ -218,21 +223,32 @@ table {
 	font-weight: 500;
 	font-size: 18px;
 	line-height: 22px;
-	margin: 30px 0;
-	letter-spacing: .2px;
+	margin: 28px 0;
+	letter-spacing: -.1px;
+	position: relative;
 	text-transform: uppercase;
 }
 .h1:after {
 	display: block;
-	margin: 16px auto;
+	margin: 20px auto;
 	content: '';
 	height: 2px;
 	width: 20px;
 	background: #03a9f5;
 }
-.h2 {
+.h1--line:after {
+	opacity: 0;
 }
-
+.h1__line {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 2px;
+	width: 20px;
+	margin: auto;
+	background: #03a9f5;
+}
 
 .m20 {
 	margin: 20px auto;
@@ -346,7 +362,7 @@ table {
 	position: absolute;
 	right: 0;
 	bottom: -6px;
-	line-height: 16px;
+	line-height: 18px;
 	content: attr(title);
 }
 
@@ -359,8 +375,11 @@ table {
 }
 .lang-toggle .ico {
 	left: auto;
-	top: 5px;
+	top: 4px;
 	right: 8px;
+}
+.lang-toggle:hover .ico {
+	background-position: -572px -130px;
 }
 .lang-toggle__box {
 	position: absolute;
@@ -376,8 +395,8 @@ table {
 	color: inherit;
 	font-size: 12px;
 	text-transform: uppercase;
-	padding: 4px 14px;
-	line-height: 20px;
+	padding: 4px 13px;
+	line-height: 18px;
 	display: block;
 }
 .lang-toggle__item--active .lang-toggle__text {
@@ -385,6 +404,9 @@ table {
 }
 .lang-toggle:hover .lang-toggle__box {
 	height: auto;
+}
+a.lang-toggle__text:hover {
+	color: #bae8ff
 }
 
 
@@ -421,12 +443,12 @@ table {
 	font-size: 48px;
 	line-height: 54px;
 	font-weight: 300;
-	margin: 20px 0;
+	margin: 15px 0;
 	display: block;
 	text-transform: uppercase;
 }
 .slider-home__btn {
-	margin: 36px 0 12px;
+	margin: 48px 0 15px;
 	line-height: 42px;
 	padding: 0 32px;
 	font-size: 14px;
@@ -443,13 +465,13 @@ table {
 	color: #565656;
 	font-size: 16px;
 	text-align: center;
-	margin: 8px 0 32px;
+	margin: 10px 0 32px;
 	line-height: 18px;
 	font-weight: 300;
 }
 .list-pic li::before {
 	display: block;
-	margin: 16px auto;
+	margin: 14px auto;
 	width: 60px;
 	height: 60px;
 	content: '';
