--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@
 	height: 506px;
 	position: relative;
 	background: url(/images/app-download__bg.jpg) no-repeat center;
+	background-size: auto 100%;
 }
 .app-download__parallax,
 .app-download__parallax::after {
@@ -103,6 +104,9 @@
 .app-download__item {
 	margin: 0 8px;
 }
+.app-download__item img {
+	transition: .05s;
+}
 .app-download__item:hover img {
 	transform: scale(1.1);
 }
@@ -118,26 +122,30 @@
 	margin-bottom: 38px;
 }
 .social-group__link {
-	width: 64px;
-	height: 64px;
+	width: 60px;
+	height: 60px;
 	display: block;
 	border-radius: 50%;
 	color: transparent;
 	font-size: 0;
-	margin: 8px;
+	margin: 8px 10px;
 	background: url(/images/sprite.png);
+	background-size: 800px 600px;
+}
+.social-group__link:hover {
+	box-shadow: 0 10px 18px rgba(0,0,0,.26);
 }
 .social-group__link--vk {
-	background-position: -30px -90px
+	background-position: -32px -92px;
 }
 .social-group__link--fb {
-	background-position: -110px -90px
+	background-position: -112px -92px;
 }
 .social-group__link--in {
-	background-position: -190px -90px
+	background-position: -192px -92px;
 }
 .social-group__link--ok {
-	background-position: -270px -90px
+	background-position: -272px -92px;
 }
 .footer__logo {
 	display: block;
@@ -146,7 +154,8 @@
 	margin: 10px auto;
 	color: transparent;
 	font-size: 0;
-	background: url(/images/sprite.png) -26px -200px
+	background: url(/images/sprite.png) -26px -200px;
+	background-size: 800px 600px;
 }
 .footer__copyright {
 	color: #d0d0d0;
@@ -434,6 +443,7 @@
 	top: 0;
 	right: 0;
 	background: url(/images/sprite.png) -476px -92px;
+	background-size: 800px 600px;
 }
 .scroolbar {
 	width:100px;
@@ -468,7 +478,11 @@
 }
 .alert_up .input {
 	width: 180px;
+	font-size: 13px;
 	margin: 32px auto 20px;
+}
+.alert_up .input--email {
+	color: #03a9f5
 }
 
 .alert_up__btns {
@@ -488,14 +502,12 @@
 }
 
 .scroll-pane {
-	margin: 28px 0 14px 122px;
-	width: 348px;
+	margin: 28px 0 14px;
+	width: 580px;
 	height: 256px;
 	overflow: auto;
 }
 .scroll-pane p {
-	font-size: 12px;
-	line-height: 18px;
 	color: #9b9b9b;
 	padding: 0;
 	margin: 18px;
@@ -540,7 +552,11 @@
 	box-shadow: 0 0 2px rgba(0,0,0,.5);
 }
 
-
+.alert_up__item h3 {
+	font-size: 18px;
+	font-weight: 500;
+	line-height: 22px;
+}
 .alert_up__item--login::before {
 	position: absolute;
 	width: 1px;
@@ -593,6 +609,7 @@
 	bottom: 0;
 	left: 0;
 	line-height: 28px;
+	cursor: text;
 }
 .form-login__text {
 	margin: 28px 0 14px;
@@ -634,6 +651,7 @@
 	height: 22px;
 	color: transparent;
 	background: url(/images/sprite.png) -480px -128px;
+	background-size: 800px 600px;
 	position: relative;
 }
 .tooltip span {
