--- a/css/style.css
+++ b/css/style.css
@@ -619,7 +619,7 @@
 .form-login + .form-login{
 	padding-left: 50px;
 }
-.alert_up h4 {
+.form-login h4 {
 	line-height: 36px;
 	margin-bottom: 29px;
 	text-align: left;
@@ -724,4 +724,29 @@
 .tooltip:hover {
 	z-index: 9;
 	overflow: visible;
+}
+
+/* text content
+----------------------------------------*/
+.content-text {
+	font-size: 18px;
+	font-weight: 300;
+	letter-spacing: .9px;
+	line-height: 30px;
+	padding: 50px;
+}
+.content-text h2 {
+	font-size: 18px;
+	font-weight: 500;
+	letter-spacing: -0.1px;
+	line-height: 22px;
+	text-align: center;
+	margin: 44px 0 22px;
+	text-transform: uppercase;
+}
+.content-text p {
+	margin: 30px 0;
+}
+.content-text li {
+	margin: 0 10px;
 }
